# AdventOfCode2019

./: .gitignore  AdventOfCode2019.cabal  AdventOfCode2019.prof  Common.hs  Day01.hs  Day01PartOne.hs  Day01PartOneSpec.hs  Day01PartTwo.hs  Day01PartTwoSpec.hs  Day02.hs  Day02PartOne.hs  Day02PartOneSpec.hs  Day02PartTwo.hs  Day03.hs  Day03PartOne.hs  Day03PartOneSpec.hs  Day03PartTwo.hs  Day03PartTwoSpec.hs  Day04.hs  Day04PartOne.hs  Day04PartOneSpec.hs  Day04PartTwo.hs  Day04PartTwoSpec.hs  Day05PartOne.hs  Day05PartTwo.hs  Day05Spec.hs  Day06PartOne.hs  Day06PartOneSpec.hs  Day06PartTwo.hs  Day06PartTwoSpec.hs  Day07PartOne.hs  Day07PartOneSpec.hs  Day07PartTwo.hs  Day07PartTwoSpec.hs  Day08PartOne.hs  Day08PartOneSpec.hs  Day08PartTwo.hs  Day08PartTwoSpec.hs  Day09PartOne.hs  Day09PartOneSpec.hs  (+76 more)
.devcontainer/: Dockerfile  devcontainer.json
dist-newstyle/cache/: compiler  config
