name: AdventOfCode2019
version: 1.0
stability: experimental

executable AdventOfCode2019
    main-is: Day23PartTwo.hs
    other-modules:
        Common
        IntCode
    build-depends:
        base -any,
        extra -any,
        hspec -any,
        ansi-terminal -any,
        containers -any,
        unordered-containers -any,
        QuickCheck -any,
        utility-ht -any,
        primes -any,
        yjtools -any
