name: AdventOfCode2019
version: 1.0
stability: experimental

executable AdventOfCode2019
    main-is: Day21PartOne.hs
    other-modules:
        Common
        IntCodeM
    build-depends:
        base -any,
        extra -any,
        monad-loops -any,
        primitive -any,
        hspec -any,
        ansi-terminal -any,
        containers -any,
        unordered-containers -any,
        QuickCheck -any,
        utility-ht -any,
        primes -any,
        yjtools -any,
        vector -any
